--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,7 @@
 /*  your css code here. If applicable */
+let nameInput = document.getElemenById("fname");
+
+
+nameInput.addEventListner("blur" , ()=>{
+	nameInput.value = nameInput.value.toUpperCase();
+})
